force-app/main/default/objects/Discovery_Session__c/Discovery_Session__c.object-meta.xml
<CustomObject>
    <description>Captures structured discovery session data from prospect interviews conducted by the SE Discovery Assistant agent.</description>
    <label>Discovery Session</label>
    <nameField>
        <displayFormat>DS-{0000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>