force-app/main/default/objects/Discovery_Session__c/fields/Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>Budget_Range__c</fullName>
    <label>Budget Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under $50K</fullName>
            </value>
            <value>
                <fullName>$50K-$250K</fullName>
            </value>
            <value>
                <fullName>$250K-$1M</fullName>
            </value>
            <value>
                <fullName>$1M+</fullName>
            </value>
            <value>
                <fullName>Not Disclosed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>