force-app/main/default/objects/Discovery_Session__c/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-50</fullName>
            </value>
            <value>
                <fullName>51-250</fullName>
            </value>
            <value>
                <fullName>251-1000</fullName>
            </value>
            <value>
                <fullName>1001-5000</fullName>
            </value>
            <value>
                <fullName>5000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>