force-app/main/default/objects/Discovery_Session__c/fields/Current_CRM__c.field-meta.xml
<CustomField>
    <fullName>Current_CRM__c</fullName>
    <label>Current CRM</label>
    <length>80</length>
    <type>Text</type>
</CustomField>