force-app/main/default/objects/Discovery_Session__c/fields/Decision_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Decision_Timeline__c</fullName>
    <label>Decision Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate (0-3mo)</fullName>
            </value>
            <value>
                <fullName>Near-term (3-6mo)</fullName>
            </value>
            <value>
                <fullName>Long-term (6-12mo)</fullName>
            </value>
            <value>
                <fullName>Exploratory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>