force-app/main/default/objects/Discovery_Session__c/fields/Discovery_Status__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Status__c</fullName>
    <label>Discovery Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Discovery Complete</fullName>
            </value>
            <value>
                <fullName>Brief Generated</fullName>
            </value>
            <value>
                <fullName>Sent to Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>