force-app/main/default/objects/Discovery_Session__c/fields/Followup_Email__c.field-meta.xml
<CustomField>
    <fullName>Followup_Email__c</fullName>
    <label>Followup Email</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>