force-app/main/default/objects/Discovery_Session__c/fields/Key_Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Key_Stakeholders__c</fullName>
    <label>Key Stakeholders</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>