force-app/main/default/objects/Discovery_Session__c/fields/Prospect_Name__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Name__c</fullName>
    <label>Prospect Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>