force-app/main/default/objects/Discovery_Session__c/fields/Recommended_Clouds__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Clouds__c</fullName>
    <label>Recommended Clouds</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Data Cloud</fullName>
            </value>
            <value>
                <fullName>Agentforce</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>Experience Cloud</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>