force-app/main/default/objects/Discovery_Session__c/fields/Solution_Brief__c.field-meta.xml
<CustomField>
    <fullName>Solution_Brief__c</fullName>
    <label>Solution Brief</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>