force-app/main/default/objects/Discovery_Session__c/fields/Top_Pain_Point_2__c.field-meta.xml
<CustomField>
    <fullName>Top_Pain_Point_2__c</fullName>
    <label>Top Pain Point 2</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>